--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mbemba Nhora </title>
+    <meta name="Content-Type" content="UTF-8">
+    <meta name="Content-Language" content="fr">
+    <meta name="Description" content="Bonjour, voici mon portfolio.">
+    <meta name="Subject" content="Developpeuse web">
+    <meta name="Copyright" content="Nhora">
+    <meta name="Author" content="Nhora">
+    <meta name="Robots" content="index">
+    <meta name="Rating" content="general">
+    <meta name="Distribution" content="global">
+    <meta name="Geography" content="France">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./ressources/icon.png" type="image/x-icon">
+    <title>Mbemba Nhora</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="src/js/nav.js"></script>
+    <script src="src/js/Progress-bar.js"></script> -->
   </body>
 </html>
